--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "postinstall": "npm install critters@0.0.20 --save-dev"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -68,5 +69,8 @@
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "critters": "^0.0.20"
   }
 }
