--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,13 @@
 {
   "version": 2,
   "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "framework": "nextjs",
+  "outputDirectory": ".next",
+  "regions": ["fra1"],
+  "env": {
+    "NEXT_PUBLIC_SITE_URL": "https://veggie-rezepte.de"
+  },
   "cleanUrls": true,
   "trailingSlash": false,
   "headers": [
