--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
+    "@types/node": "20.6.2",
+    "@types/react": "18.2.22",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.5.0",
@@ -73,6 +75,7 @@
     "@types/node": "^22.13.5",
     "@types/react": "^18.3.18",
     "critters": "^0.0.20",
+    "postcss-nesting": "^13.0.1",
     "typescript": "^5.7.3"
   }
 }
