--- a/vercel.json
+++ b/vercel.json
@@ -6,18 +6,10 @@
   "outputDirectory": ".next",
   "regions": ["fra1"],
   "env": {
-    "NEXT_PUBLIC_SITE_URL": "https://www.veggie-rezepte.de"
+    "NEXT_PUBLIC_SITE_URL": "https://veggie-rezepte.de"
   },
   "cleanUrls": true,
   "trailingSlash": false,
-  "redirects": [
-    {
-      "source": "https://veggie-rezepte.de/:path*",
-      "destination": "https://www.veggie-rezepte.de/:path*",
-      "permanent": true,
-      "statusCode": 301
-    }
-  ],
   "headers": [
     {
       "source": "/fonts/inter-var-latin.woff2",
