--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "buildCommand": "npm run build",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "outputDirectory": ".next",
+  "outputDirectory": "out",
   "regions": ["fra1"],
   "env": {
     "NEXT_PUBLIC_SITE_URL": "https://www.veggie-rezepte.de"
@@ -19,7 +19,7 @@
   ],
   "headers": [
     {
-      "source": "/fonts/inter-var-latin.woff2",
+      "source": "/fonts/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
